# TradingSystems

./: .gitignore  AlpacaBroker.h  AlpacaPipeline.h  CMakeLists.txt  HTTPClient.h  HTTPSClient.h  IAsyncPublisher.h  IBroker.h  IDataPipeLine.h  IDataPipelinePublisher.h  IDataPipelineSubscriber.h  IMarketData.h  IPublisher.h  ISreamData.h  ISubscriber.h  ITradingComponentFactory.h  JSONFileParser.h  Main.cpp  PrintSubscriber.h  README.md  StreamData.h  TradierBroker.h  TradierPipeline.h  TradingSystemsComponentFactory.h  conanfile.py  info.txt  tradingSystems.cfg
Brokers/: AlpacaBroker.h  BrokerResponse.h  CMakeLists.txt  IBroker.h  ICryptoBroker.h  TradierBroker.h
Factories/: AlpacaSystemComponentFactory.h  CMakeLists.txt  ISystemComponentFactory.h  TradierSystemComponentFactory.h
Strategies/: SimpleStrategy.h
Strategies/States/: IState.h
Streams/: AlpacaCryptoStream.h  AlpacaPipeline.h  AlpacaStream.h  CMakeLists.txt  IAsyncPublisher.h  IDataPipeline.h  IDataStream.h  IDataStreamSubscriber.h  PrintSubscriber.h  QueuedStreamSubscriber.h  StreamData.h  TradierPipeline.h  TradierStream.h
TradingAlgos/: CMakeLists.txt  IChainAlgo.h  IStateAlgo.h  SimpleAlgo.h  StateAlgo.h
TradingAlgos/States/: BuyState.h  CMakeLists.txt  IState.h  PendingOrderState.h  SellState.h  TrailingStopSellState.h  TrailingStopState.h
conan/profiles/: gccLinuxDebug  gccLinuxRelease
helpers/: CMakeLists.txt  IAsync.h  JSONFileParser.h  PrintSubscriber.h  safeQueue.h
